--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image : php:8.1-fpm-alpine
     volumes:
       - ./php.ini:/usr/local/etc/php/php.ini
-      - ../:/var/www/html
+      - ./:/var/www/html
     working_dir: /var/www/html
     
   nginx:
@@ -15,6 +15,6 @@ services:
       - 80:80
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
-      - ../:/var/www/html
+      - ./:/var/www/html
     depends_on:
       - php
