--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,11 @@
 version: '3'
 services:
-  php:
-    container_name : php
-    image : php:8.1-fpm-alpine
-    volumes:
-      - ./php.ini:/usr/local/etc/php/php.ini
-      - ./:/var/www/html
-    working_dir: /var/www/html
-    
-  nginx:
-    container_name: nginx
-    image: nginx:1.19.5-alpine
+  nodejs:
+    container_name: nodejs
+    build: ./node-app
+    # working_dir: /app
+    volumes :
+      - ./node-app:/app
     ports:
-      - 80:80
-    volumes:
-      - ./default.conf:/etc/nginx/conf.d/default.conf
-      - ./:/var/www/html
-    depends_on:
-      - php
+      - 8080:8080
+    tty : true
